fix: 履歴画面のFirestore連携エラーを修正
walk_history_page.dart が古い DatabaseHelper を参照し、Walk モデルの startTime の型変更に対応していなかった問題を修正しました。
- DatabaseHelper への参照を削除し、Firestoreから直接データを取得するように変更。
- Walk モデルの startTime が DateTime 型になったことに合わせて、日付フォーマットの処理を修正。
これにより、散歩記録の履歴がFirestoreから正しく読み込まれるようになりました。

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,10 @@ dependencies:
   google_maps_flutter: ^2.12.3
   geolocator: ^14.0.2
   flutter_map: ^8.1.1
-  sqflite: ^2.4.2
-  path_provider: ^2.1.5
+  firebase_core: ^2.28.0
+  cloud_firestore: ^4.16.0
+  # sqflite: ^2.4.2
+  # path_provider: ^2.1.5
   intl: ^0.20.2 # ここを修正！
 
 
