--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_map: ^8.1.1
   firebase_core: ^2.28.0
   cloud_firestore: ^4.16.0
+  latlong2: ^0.9.1
   # sqflite: ^2.4.2
   # path_provider: ^2.1.5
   intl: ^0.20.2 # ここを修正！
